--- a/product-manager.html
+++ b/product-manager.html
@@ -138,7 +138,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/farfetch/job/oVNBafwd'>Farfetch Careers - Product Designer - Store of The Future</a></h5> 
+<h5><a href='https://jobs.jobvite.com/farfetch/job/oVNBafwd'>Farfetch Careers - Product Designer - Store of The Future</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -248,13 +248,19 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/netflix/9b3e7903-8999-48c3-ade2-d3b70c063441'>Netflix - Product Designer, Interactive Experiences</a></h5> 
+<h5><a href='https://jobs.lever.co/netflix/9b3e7903-8999-48c3-ade2-d3b70c063441'>Netflix - Product Designer, Interactive Experiences</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/product-manager-11689'>Product Manager - Akamai Careers</a></h5> 
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://scholastic.referrals.selectminds.com/jobs/crm-lead-salesforce-com-product-owner-5189'>CRM Lead, Salesforce.com Product Owner - Scholastic Inc. Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>22 hours ago ... The primary focus of this role is the creation and execution of a strategic CRM 
+roadmap that heavily leverages Salesforce.com, customer data, and integrations
+?...</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Nextech1/743999689160331-product-manager'>Nextech Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -451,10 +457,6 @@ delivering SaaS solutions, or you might be working in a Business Analyst or?...<
 <hr/>
 <h5><a href='https://jobs.jobvite.com/funding-circle-uk/job/oFQwafwV'>Funding Circle UK Careers - Senior Product Manager, Investor</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/splash/jobs/1788859'>Job Application for Senior Product Designer at Splash</a></h5> 
-<p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 
