--- a/full-stack.html
+++ b/full-stack.html
@@ -146,11 +146,11 @@ intelligence?...</p>
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/matternet/4f2a02d4-cc95-4ee0-ae1a-2238050c925f'>Matternet - Full Stack Cloud Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/matternet/4f2a02d4-cc95-4ee0-ae1a-2238050c925f'>Matternet - Full Stack Cloud Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://justaddmusic.join.com/jobs/259403-fullstack-developer-m-f-d'>Fullstack Developer</a></h5> 
+<h5><a href='https://justaddmusic.join.com/jobs/259403-fullstack-developer-m-f-d'>Fullstack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... JAM Just Add Music GmbH has a job opening for Fullstack Developer (m/f/d) in 
 Berlin (published: 19.06.2019). Apply now or check the other available jobs.</p>
@@ -181,7 +181,7 @@ Platform?...</p>
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ontruck.workable.com/jobs/1084650'>Senior Full Stack Engineer - Apply online - Ontruck - Jobs</a></h5> 
+<h5><a href='https://ontruck.workable.com/jobs/1084650'>Senior Full Stack Engineer - Apply online - Ontruck - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Senior Full Stack Engineer at Ontruck.</p>
 <hr/>
@@ -205,7 +205,7 @@ Platform?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nezasa.join.com/jobs/267120-full-stack-software-engineer'>Job @ Nezasa (Lisbon): Full-Stack Software Engineer | JOIN</a></h5> 
+<h5><a href='https://nezasa.join.com/jobs/267120-full-stack-software-engineer'>Job @ Nezasa (Lisbon): Full-Stack Software Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -278,7 +278,7 @@ Developer to support USAID's Office of Transition Initiatives (OTI). In this pos
 <p><span class="badge badge-light">Ottawa, ON, Canada</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DevIQ/743999692277899-senior-javascript-full-stack-developer'>DevIQ Senior Javascript Full-Stack Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DevIQ/743999692277899-senior-javascript-full-stack-developer'>DevIQ Senior Javascript Full-Stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
